src/styles/NavBar.module.css
@keyframes dotsShine {
  0% {
    background-position: 0 0, center center;
  }
  100% {
    background-position: 100% 0, center center;
  }
}

.NavBar {
  background-color: #808080;
  background-image: 
    radial-gradient(rgba(255, 255, 255, 0.05) 1px, transparent 1px), /* dots */
    linear-gradient(
      120deg,
      rgba(255, 255, 255, 0) 0%,
      rgba(255, 255, 255, 0.05) 30%,
      rgba(255, 255, 255, 0.15) 50%,
      rgba(255, 255, 255, 0.05) 70%,
      rgba(255, 255, 255, 0) 100%
    ); /* shine */
  background-size: 5px 5px, 200% 100%;
  background-repeat: repeat, no-repeat;
  background-position: 0 0, center center;
  animation: dotsShine 120s linear infinite;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  padding-left: 20px;
  padding-right: 20px;
}

.NavLink {
  padding: 5px;
  font-size: 0.75rem;
  transition: all 1.5s ease;
}

.NavLink:hover,
.NavLink.active {
  color: #cfced3;
  text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.05),
    0 0 1px rgba(255, 255, 255, 0.5),
    0 0 5px rgba(200, 255, 255, 0.3),
    0 0 9px rgba(200, 255, 255, 0.1);
  background: linear-gradient(
    45deg,
    rgba(0, 255, 255, 0.7),
    rgba(255, 0, 255, 0.7)
  );
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
}


/* Specific icon styles */
.NavIcon {
  color: #cfced3;
  font-size: 1.3rem;
  padding: 7px;
  vertical-align: middle;
}

.NavIcon:hover {
  cursor: pointer;
  transition: all 0.3s ease-in-out;
  color: #cfced3;
  text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.05),
    0 0 1px rgba(255, 255, 255, 0.5),
    0 0 5px rgba(200, 255, 255, 0.3),
    0 0 9px rgba(200, 255, 255, 0.1);
  background: linear-gradient(
    45deg,
    rgba(0, 255, 255, 0.7),
    rgba(255, 0, 255, 0.7)
  );
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
}

.Active i {
  color: #cfced3;
  text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.05),
    0 0 1px rgba(255, 255, 255, 0.5),
    0 0 5px rgba(200, 255, 255, 0.3),
    0 0 9px rgba(200, 255, 255, 0.1);
  background: linear-gradient(
    45deg,
    rgba(0, 255, 255, 0.7),
    rgba(255, 0, 255, 0.7)
  );
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
}

/* RESPONSIVE TWEAKS */
@media (min-width: 576px) and (max-width: 768px) {
  .NavLink {
    font-size: 0.5rem;
  }
}

@media (min-width: 1024px) {
  .NavLink {
    font-size: 0.8rem;
  }
}

@media (max-width: 400px) {
  .NavBar {
    flex-direction: column;
    align-items: center;
    padding-left: 10px;
    padding-right: 5px;
  }

  .NavLink {
    font-size: 0.6rem;
    padding: 3px;
  }
}

.Branding {
  font-family: "Exo 2", sans-serif;
  font-size: 1.5rem !important;
  font-weight: bold;
  text-transform: lowercase;
  display: flex;
  align-items: center;
  color: #cfced3;
  transition: color 0.3s ease;
}

.Branding i {
  margin-right: 2px;
  font-size: 1.5rem;
  color: #cfced3;
  transition: color 0.3s ease;
  padding-right: 5px;
}

.Branding,
.Branding i {
  transition: all 1.5s ease;
}

.Branding:hover,
.Branding:hover i,
.Branding.active,
.Branding.active i {
  color: #cfced3;
  text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.05), 0 0 1px rgba(255, 255, 255, 0.5),
    0 0 5px rgba(200, 255, 255, 0.3), 0 0 9px rgba(200, 255, 255, 0.1);
  background: linear-gradient(
    45deg,
    rgba(0, 255, 255, 0.7),
    rgba(255, 0, 255, 0.7)
  );
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
}

.NavToggle {
  font-size: 1.5rem;
  border: none;
  background: none;
  color: #cfced3;
  display: flex;
  align-items: center;
  cursor: pointer;

  /* Gradient glow effect */
  text-shadow:
    1px 2px 2px rgba(0, 0, 0, 0.05),
    0 0 1px rgba(255, 255, 255, 0.5),
    0 0 5px rgba(200, 255, 255, 0.3),
    0 0 9px rgba(200, 255, 255, 0.1);
  background: linear-gradient(
    45deg,
    rgba(0, 255, 255, 0.7),
    rgba(255, 0, 255, 0.7)
  );
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
}

.NavToggle:hover {
  /* Optional: extra intensity on hover */
  text-shadow:
    1px 2px 2px rgba(0, 0, 0, 0.1),
    0 0 2px rgba(255, 255, 255, 0.6),
    0 0 8px rgba(200, 255, 255, 0.4),
    0 0 12px rgba(200, 255, 255, 0.2);
}

.NavToggle i {
  color: inherit;
}



.NavToggle:focus {
  outline: none;
  box-shadow: none;
}

